<resources>
    <string name="app_name">Payo</string>
    <string name="not_permissions_prompt">No authorization，This application may not work properly。Open the application Settings screen to modify the application permissions</string>
    <string name="must_permissions">Permission Required</string>
    <string name="permissions_prompt">This app requires the following permissions</string>
    <string name="permissions_prompt_camera">Camera access has been prohibited. Please grant permission to access camera.</string>
    <string name="home">Home</string>
    <string name="licai">Investment</string>
    <string name="find">Discover</string>
    <string name="user">My Profile</string>
    <string name="user_msg_btn">My Profile</string>
    <string name="read_agreement">I have read and agree</string>
    <string name="read_agreement_new">I read and agree the terms of the</string>
    <string name="regist">Sign up</string>
    <string name="forget_password">Forgot PIN</string>
    <string name="next">Next</string>
    <string name="re_null_email_code">Please enter the verification code</string>
    <string name="add_bank_account">Add bank account</string>
    <string name="null_text">No data available</string>
    <string name="look_detail">view details</string>
    <string name="bank_email_input_error">Email entered incorrectly</string>
    <string name="bank_name_input_error">Please enter bank name</string>
    <string name="bank_bsb_input_error">Please enter BSB</string>
    <string name="bank_name">Bank Name</string>
    <string name="bank_card_account">Account Number</string>
    <string name="bsb">BSB</string>
    <string name="bank_address">Address</string>
    <string name="city">City</string>
    <string name="postcode">Postcode</string>
    <string name="save_success">Save successfully</string>
    <string name="please_choice">Please select</string>
    <string name="input_bank_account">Please enter account number</string>
    <string name="input_bank_account_name">Please enter account holder</string>
    <string name="please_agree_agreement">Please agree to the terms and conditions to continue</string>
    <string name="transfer_portion">Share Transfer</string>
    <string name="setting">Settings</string>
    <string name="z_email">Email</string>
    <string name="set_repay_pas">Set Transaction Password</string>
    <string name="unlogin_success">Exited</string>
    <string name="cancel">Cancel</string>
    <string name="not_greater">Date of Februray cannot be greater than 29.</string>
    <string name="not_greater2">Date of Februray cannot be greater than 28.</string>
    <string name="time_error">Please check selected date.</string>
    <string name="australia">Australia</string>
    <string name="emile_code_put">The verification code has been sent to your phone number</string>
    <string name="pick_place">Please select your location</string>
    <string name="gps_not_use">Your location could not been determined, please turn on location service.</string>
    <string name="unsetting">Not set</string>
    <string name="select_repay_account">Please select Payment Account</string>
    <string name="phone_number">Phone Number</string>
    <string name="please_input_phone_number">Please Enter New Phone Number</string>
    <string name="set_4pin">Set up a PIN</string>
    <string name="input_pin_code">Enter Your PIN</string>
    <string name="change_pin_code">Change PIN</string>
    <string name="last_chance">One time left, log out if fail.</string>
    <string name="language_switch">Language</string>
    <string name="zhou">State</string>
    <string name="PIN_Successfully">Your PIN has been set.</string>
    <string name="add_bank_card">Add Card</string>
    <string name="net_work_no">No Network Connection</string>
    <string name="net_work_no_tex">Please check your network connection and try again.</string>
    <string name="select_bank_name">Select Bank Name</string>
    <string name="add_bank_account_check_new">I agree to the terms of the Direct Debit Terms and Conditions and authorise Payo Pty Ltd ACN 638 179 567 or its associated party, to debit the nominated bank account outlined above.</string>
    <string name="Please_confirm">Please confirm…</string>
    <string name="want_logout">Are you sure you want to log out?</string>
    <string name="original_pin">Your current PIN</string>
    <string name="transaction_failed">Payment failed</string>
    <string name="delete">Delete</string>
    <string name="re_t_first_name">Legal first name</string>
    <string name="re_t_middle_name">Middle name</string>
    <string name="re_t_last_name">Legal last name</string>
    <string name="fenqi_add_bank_top">Please adding a bank account as a payment method to your direct debit</string>
    <string name="illing_tishi">In order to enable your credit, an authorised third party will conduct a personal bank check, all information involved will not be stored by any parties. Please make sure the bank account you provide for the credit check is the same as the name you provided before.</string>
    <string name="Discover_Nearby">Discover Nearby</string>
    <string name="terms">Terms：</string>
    <string name="Transaction_terms">Transaction Time: </string>
    <string name="Reference_no">Reference No.: </string>
    <string name="please_repay_money">Your overdue payment is still processing, you can use Payo again when it clears.</string>
    <string name="please_repay_money_title">Overdue Payment Processing </string>
    <string name="cant_find_location">Can’t find your location</string>
    <string name="please_enable_location">Please enable location services to see nearby venues.</string>
    <string name="enable_location">Enable</string>
</resources>